# paperweave

./: .env.example  .gitignore  BUGFIX.md  LICENSE  README.md  pyproject.toml
configs/: app.yaml
configs/prompts/: qa_biomed_user_v1.txt  qa_biomed_v1.txt  qa_system_v1.txt  qa_user_v1.txt  summary_biomed_user_v1.txt  summary_biomed_v1.txt  summary_system_v1.txt
docs/: github-about.md
docs/release-notes/: v0.1.0-initial-release.md  v0.2.1-stability-and-bootstrap.md  v0.2.2-bootstrap-prompts.md
src/paperlab/: __init__.py
src/paperlab/cli/: citations_cmd.py  doctor_cmd.py  export_cmd.py  ingest_cmd.py  init_cmd.py  main.py  parse_cmd.py  qa_cmd.py  run_cmd.py  summarize_cmd.py
src/paperlab/config/: __init__.py  settings.py
src/paperlab/enrich/: biomed_pre_enrich.py  crossref_client.py  forward_citations.py  http.py  openalex_client.py  pmc_client.py  pubmed_client.py  semanticscholar_client.py  unpaywall_client.py
src/paperlab/export/: qa_export.py  summary_export.py
src/paperlab/ingest/: registry.py  scanner.py
src/paperlab/llm/: client.py  qa.py  summary.py  task_common.py
tests/: test_smoke.py
tests/cli/: test_cli_smoke.py  test_doctor.py  test_parse_run.py
tests/config/: test_settings.py
tests/e2e/: test_v1_flow.py
tests/enrich/: test_forward_citations.py  test_http.py  test_pmc_client.py  test_pubmed_client.py
tests/export/: test_exports.py
tests/ingest/: test_scanner.py
tests/llm/: test_client.py  test_qa.py  test_summary.py
tests/parsing/: test_classifier.py  test_pipeline.py
tests/storage/: test_schema.py  test_status_rules.py
(+11 files in other folders)
